fix(style): collapse button visible without scroll in mobile

--- a/frappe/public/scss/desk/sidebar.scss
+++ b/frappe/public/scss/desk/sidebar.scss
@@ -306,6 +306,7 @@ body {
 		.body-sidebar {
 			padding: 8px 8px 10px 8px;
 			width: 220px;
+			height: 100%;
 		}
 		// acts a overlay when in mobile view
 		.body-sidebar-placeholder {
